Gjort om listan i cars till en hashmap med ordrar
Gjort getAvailableCars

Gjort isCarBooked